# pgToSqlite

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: FindOptionParser.cmake  FindSqlite.cmake
src/: CMakeLists.txt  pgToSqlite.cpp
